deployment/cluster/03-otlp-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-deployment
  labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:latest
          imagePullPolicy: IfNotPresent
          ports:
            # Agent Ports (UDP)
            - containerPort: 5775
              name: agent-comp-udp
              protocol: UDP
            - containerPort: 6831
              name: agent-bin-udp
              protocol: UDP
            - containerPort: 6832
              name: agent-conf-udp
              protocol: UDP
            # Agent Port (TCP)
            - containerPort: 5778
              name: agent-http-cfg
              protocol: TCP
            # Jaeger UI / Query Port (TCP)
            - containerPort: 16686
              name: jaeger-ui
              protocol: TCP
            # Collector Ports (TCP)
            - containerPort: 14268
              name: coll-http
              protocol: TCP
            - containerPort: 14250
              name: coll-grpc
              protocol: TCP
            # OTLP Ports (TCP)
            - containerPort: 4317
              name: otlp-grpc
              protocol: TCP
            - containerPort: 4318
              name: otlp-http
              protocol: TCP
          volumeMounts:
            - name: jaeger-data
              mountPath: /tmp/jaeger
          livenessProbe:
            httpGet:
              path: /
              port: 16686
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: jaeger-ui
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: jaeger-data
          emptyDir: {}
