deployment/cluster/05-application-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notlegaladvice-server-deployment
  labels:
    app: notlegaladvice-server
    component: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notlegaladvice-server
  template:
    metadata:
      labels:
        app: notlegaladvice-server
    spec:
      containers:
        - name: server
          image: localhost/notlegaladvice-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
