deployment/cluster/04-otlp-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-collector-service
  labels:
    app: jaeger
    component: collector
spec:
  selector:
    app: jaeger
  type: ClusterIP
  ports:
    - name: otlp-grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
