deployment/cluster/07-application-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notlegaladvice-server-ingress
  labels:
    app: notlegaladvice-server
    component: application
  annotations:
    projectcontour.io/response-timeout: 120s
spec:
  ingressClassName: contour
  defaultBackend:
    service:
      name: notlegaladvice-server-service
      port:
        number: 3000
